fix lines on mobile

--- a/asaff.com/src/components/companyCard/style.sass
+++ b/asaff.com/src/components/companyCard/style.sass
@@ -310,9 +310,29 @@ $shadow: 0 3px 6px $box-shadow-color
 .constructionNoBorder
     border: none
 
-@media only screen and (max-width: 375px)
+@media only screen and (max-width: 320px)
     .constructionLine
         margin-left: 3%
     
     .topLine
         margin-left: 3%
+
+@media only screen and (min-width: 360px)
+    .constructionLine
+        margin-left: 8.2%
+    
+    .topLine
+        margin-left: 8.2%
+
+    .freightBlock
+        height: 1195px
+
+@media only screen and (min-width: 375px)
+    .constructionLine
+        margin-left: 10%
+    
+    .topLine
+        margin-left: 10%
+
+     .freightBlock
+        height: 1178px
